--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 					<div class="col">
 						<div class="home_content text-center">
 							<div class="home_title"><h1>Renacer Pijaos</h1></div>
-							<div class="home_text">El mejor lugar para su </div>
+							<div class="home_text">El mejor lugar propio para disfrutar con su familia  </div>
 						</div>
 					</div>
 				</div>
