--- a/index.html
+++ b/index.html
@@ -66,8 +66,11 @@
 				<div class="row">
 					<div class="col">
 						<div class="home_content text-center">
-							<div class="home_title"><h1>Renacer Pijaos</h1></div>
-							<div class="home_text">El mejor lugar propio para disfrutar con su familia  </div>
+							<div class="home_title">
+								<h1>Renacer Pijaos</h1>
+										<h1>II Etapa</h1>
+							</div>
+							<div class="home_text">Un ambiente natural propio para disfrutar en familia  </div>
 						</div>
 					</div>
 				</div>
@@ -95,21 +98,28 @@
 
 				<!-- Intro Image -->
 				<div class="col-lg-6">
+					<div class="zoom">
 					<div class="intro_image"><img src="images/intro.jpg" alt="https://unsplash.com/@papao03"></div>
 				</div>
-
+				</div>
+        <div class="col-lg-2"></div>
 				<!-- Intro Content -->
-				<div class="col-lg-6 intro_col">
+				<div class="col-lg-4 intro_col"  >
 					<div class="intro_content">
 						<div class="quote"><img src="images/quote.png" alt=""></div>
 						<div class="intro_text">
-							<p>In vitae nisi aliquam, scelerisque leo a, volutpat sem. Vivamus rutrum dui fermentum eros hendrerit, id lobortis leo volutpat. Maecenas sollicitudin est in libero pretium interdum. Nullam volutpat dui sem, ac congue purus hendrerit, id lobortis leo luctus nec.</p>
+							<p> Renacer Pijaos es un sitio recreacional  y al a vez esta en un ambiente natural, es lo que queríamos comprar, se nos dio la oportunidad.</p>
 						</div>
+						<pre>
+								<div class="video-responsive">
+										<iframe   src="https://www.youtube.com/embed/ouQJmb2V8Mc" 	frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+								</div>
+						</pre>
 						<div class="intro_author d-flex flex-row align-items-center justify-content-start">
-							<div class="author_image"><img src="images/author_1.jpg" alt="https://unsplash.com/@onurozkardes"></div>
+							<div class="author_image"><img src="images/author_rp.jpg" ></div>
 							<div class="intro_author_content">
-								<div class="intro_author_name">Michael Williams</div>
-								<div class="intro_author_title">client</div>
+								<div class="intro_author_title">Comentario Cliente I Etapa Renacer Pijaos/div>
+
 							</div>
 						</div>
 					</div>
@@ -267,7 +277,7 @@
 			<div class="row">
 				<div class="col">
 					<div class="section_title_container_2">
-						<div class="section_title"><h1>Our Newsletter</h1></div>
+						<div class="section_title"><h1>Como LLegar </h1></div>
 					</div>
 				</div>
 			</div>
@@ -281,16 +291,6 @@
 						</div>
 					</div>
 				</div>
-
-				<!-- Newsletter Form -->
-				<div class="col-lg-6 newsletter_col">
-					<form action="#" class="newsletter_form" id="newsletter_form">
-						<input type="email" class="newsletter_input" placeholder="Your email" required="required">
-						<button class="newsletter_button">subscribe</button>
-					</form>
-				</div>
-			</div>
-		</div>
 	</div>
 
 	<!-- Contact -->
@@ -322,7 +322,7 @@
 							<ul class="contact_info_list">
 								<li class="d-flex flex-row align-items-start justify-content-start">
 									<div><div class="contact_info_icon d-flex flex-column align-items-center justify-content-center"><img src="images/placeholder.png" alt=""></div></div>
-									<div class="contact_info_text">1481 Creekside Lane Avila Beach, CA 931</div>
+									<div class="contact_info_text">Renacer Pijaos, Guamo</div>
 								</li>
 								<li class="d-flex flex-row align-items-center justify-content-start">
 									<div><div class="contact_info_icon d-flex flex-column align-items-center justify-content-center"><img src="images/smartphone.png" alt=""></div></div>
