--- a/index.html
+++ b/index.html
@@ -110,15 +110,16 @@
 						<div class="intro_text">
 							<p> Renacer Pijaos es un sitio recreacional  y al a vez esta en un ambiente natural, es lo que queríamos comprar, se nos dio la oportunidad.</p>
 						</div>
+						<div class="quote"><img src="images/quote.png" alt=""></div>
 						<pre>
 								<div class="video-responsive">
-										<iframe   src="https://www.youtube.com/embed/ouQJmb2V8Mc" 	frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+										<iframe   src="https://www.youtube.com/embed/ouQJmb2V8Mc"  height="300"	frameborder="0" allowfullscreen="allowfullscreen"></iframe>
 								</div>
 						</pre>
 						<div class="intro_author d-flex flex-row align-items-center justify-content-start">
 							<div class="author_image"><img src="images/author_rp.jpg" ></div>
 							<div class="intro_author_content">
-								<div class="intro_author_title">Comentario Cliente I Etapa Renacer Pijaos/div>
+								<div class="intro_author_title">Comentario Cliente I Etapa Renacer Pijaos</div>
 
 							</div>
 						</div>
@@ -281,6 +282,9 @@
 					</div>
 				</div>
 			</div>
+			<div class="map-responsive">
+<iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d1018441.901223275!2d-75.11125951807685!3d4.3568604809005524!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e0!4m5!1s0x8e3f9bfd2da6cb29%3A0x239d635520a33914!2zQm9nb3TDoQ!3m2!1d4.710988599999999!2d-74.072092!4m5!1s0x8e3934722925515f%3A0x8aac4c347193bd92!2sRenacer+Pijaos%2C+Guamo-Ortega%2C+Guamo%2C+Tolima!3m2!1d4.0031476999999995!2d-75.03222629999999!5e0!3m2!1ses-419!2scl!4v1552705165206" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
 			<div class="row newsletter_row">
 
 				<!-- Newsletter Content -->
@@ -330,7 +334,7 @@
 								</li>
 								<li class="d-flex flex-row align-items-center justify-content-start">
 									<div><div class="contact_info_icon d-flex flex-column align-items-center justify-content-center"><img src="images/mail.png" alt=""></div></div>
-									<div class="contact_info_text">yourmail@gmail.com</div>
+									<div class="contact_info_text">gonzalo.pineda@gmail.com</div>
 								</li>
 							</ul>
 						</div>
@@ -397,7 +401,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <script src="plugins/progressbar/progressbar.min.js"></script>
 <script src="plugins/colorbox/jquery.colorbox-min.js"></script>
 <script src="plugins/parallax-js-master/parallax.min.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyCIwF204lFZg1y4kPSIhKaHEXMLYxxuMhA"></script>
+<script src="https://www.google.com/maps/dir/Bogot%C3%A1/Renacer+Pijaos,+Guamo-Ortega,+Guamo,+Tolima/@4.174034,-74.8082086,10z/data=!4m14!4m13!1m5!1m1!1s0x8e3f9bfd2da6cb29:0x239d635520a33914!2m2!1d-74.072092!2d4.7109886!1m5!1m1!1s0x8e3934722925515f:0x8aac4c347193bd92!2m2!1d-75.0322263!2d4.0031477!3e0"></script>
 <script src="js/custom.js"></script>
 </body>
 </html>
