--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 			<div class="row">
 				<div class="col">
 					<div class="section_title_container text-center">
-						<div class="section_title"><h1>Beach Hotel- More than a stay</h1></div>
-						<div class="section_text">In vitae nisi aliquam, scelerisque leo a, volutpat sem. Vivamus rutrum dui fermentum eros hendrerit, id lobortis leo volutpat. Maecenas sollicitudin est in libero pretium interdum.</div>
+						<div class="section_title"><h1>Renacer Pijaos-II Etapa</h1></div>
+						<div class="section_text">La segunda etapa de Renacer Pijaos  es un condominio  construido fuera  de la zona Urbana del Guamo –Tolima  en ambiente    natural   con un diseño ecológico rodeado de zonas verdes , lagos  , senderos deportivos y espacios recreativos para descansar.  Contará con su portería vigilada, piscinas, cancha futbol, biogimnasio y sistemas auto sostenibles como para las generaciones energía eléctrica por medio de paneles solares y una planta de tratamiento de agua y servicios. .</div>
 					</div>
 				</div>
 			</div>
@@ -99,8 +99,21 @@
 				<!-- Intro Image -->
 				<div class="col-lg-6">
 					<div class="zoom">
-					<div class="intro_image"><img src="images/intro.jpg" alt="https://unsplash.com/@papao03"></div>
-				</div>
+					     <div class="intro_image"><img src="images/intro.jpg" alt="https://unsplash.com/@papao03"></div>
+				  </div>
+				<div>
+				<p> </p>
+					<p>Los lotes de 500 m2 (20 X 25 mtr) tienen un costo de 45 millones, estamos otorgado un 20 % de descuento ($9 millones Solo para Manzanas R y U), cada lote se separa con 5 millones.
+						La cuota inicial es del 30% es decir $10.800.000 pesos y se puede diferir en 4 o 5 contados.
+						El saldo del 70 % (25.2millones) lo puede pagar en: </p>
+						<p>•	12 cuotas fijas de $$2.100.000 </p>
+						<p>•	12 cuotas fijas de $$2.100.000 </p>
+						<p>•	12 cuotas fijas de $$2.100.000 </p>
+						<p>•	12 cuotas fijas de $$2.100.000 </p>
+						<p>•	Financiación con Bancolombia </p>
+        		<p>Los lotes si están listos para escrituración, tan pronto se haga el pago si es financiado se hace promesa de compraventa y en el último pago se hace la escrituración</p>
+
+ 				</div>
 				</div>
         <div class="col-lg-2"></div>
 				<!-- Intro Content -->
@@ -140,34 +153,38 @@
 							<div class="section_title_container_2">
 								<div class="section_title"><h1>Casa Modelo</h1></div>
 							</div>
-							<div class="room_price">From <span>$190</span>/ night</div>
+							<div class="room_price">Desde <span>$139.5 Millones</div>
 						</div>
 						<div class="room_list">
 							<ul>
 								<li class="d-flex flex-row align-items-start justify-content-start">
-									<div><div>Bed:</div></div>
-									<div>Double bed</div>
+									<div><div>Area:</div> </div>
+									<div>63 M2</div>
 								</li>
 								<li class="d-flex flex-row align-items-start justify-content-start">
-									<div><div>Capacity:</div></div>
-									<div>2 adults</div>
+									<div><div>Baños:</div></div>
+									<div>1</div>
 								</li>
-								<li class="d-flex flex-row align-items-start justify-content-start">
-									<div><div>Room size:</div></div>
-									<div>55m²</div>
-								</li>
-								<li class="d-flex flex-row align-items-start justify-content-start">
-									<div><div>View:</div></div>
-									<div>Sea view</div>
-								</li>
-								<li class="d-flex flex-row align-items-start justify-content-start">
-									<div><div>Facilities:</div></div>
-									<div>Iron, TV, Hair dryer</div>
-								</li>
+									<li class="d-flex flex-row align-items-start justify-content-start">
+									<div><div>Habitaciones :</div></div>
+									<div>2</div>
+									<li class="d-flex flex-row align-items-start justify-content-start">
+										<div><div>Sala Comedor:</div></div>
+										<div>1</div>
+									</li>
+									<li class="d-flex flex-row align-items-start justify-content-start">
+										<div><div>Cocina:</div></div>
+										<div>1</div>
+									</li>
+                  	<div></div>
+                </li>
+								<div class="lote-responsive">
+									<iframe width="400" height="250" src="https://www.youtube.com/embed/82jMDshfjTw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+								</div>
+                <a href="documentos/Modelo Casas Renacer Pijaos.pdf" download="Documentos Renacer ">Baje el documento de todas las casas aqui </a>
 							</ul>
 						</div>
-						<div class="button room_button trans_200"><a href="#">book now</a></div>
-					</div>
+						</div>
 				</div>
 			</div>
 		</div>
@@ -186,9 +203,9 @@
 				<div class="col-lg-4">
 					<div class="icon_box text-center">
 						<div class="icon_box_icon"><img src="images/icon_1.svg" alt="https://www.flaticon.com/authors/monkik"></div>
-						<div class="icon_box_title"><h2>Beautiful Rooms</h2></div>
+						<div class="icon_box_title"><h2>Casas Estilo Mediterraneo</h2></div>
 						<div class="icon_box_text">
-							<p>In vitae nisi aliquam, scelerisque leo a, volutpat sem. Vivamus rutrum dui fermentum eros hendrerit, id lobortis leo volutpat.</p>
+							<p>Casas donde se destaca los espacios interiores y exteriores amplios diseñados para hacer comoda su estadia </p>
 						</div>
 					</div>
 				</div>
@@ -197,9 +214,9 @@
 				<div class="col-lg-4">
 					<div class="icon_box text-center">
 						<div class="icon_box_icon"><img src="images/icon_2.svg" alt="https://www.flaticon.com/authors/monkik"></div>
-						<div class="icon_box_title"><h2>Swimming Pool</h2></div>
+						<div class="icon_box_title"><h2>Ambiente para Recreción y Descanso </h2></div>
 						<div class="icon_box_text">
-							<p>In vitae nisi aliquam, scelerisque leo a, volutpat sem. Vivamus rutrum dui fermentum eros hendrerit, id lobortis leo volutpat.</p>
+							<p>Piscina , Gimnasio, lagos,Sendero ecológico.</p>
 						</div>
 					</div>
 				</div>
@@ -208,9 +225,9 @@
 				<div class="col-lg-4">
 					<div class="icon_box text-center">
 						<div class="icon_box_icon"><img src="images/icon_3.svg" alt="https://www.flaticon.com/authors/monkik"></div>
-						<div class="icon_box_title"><h2>Luxury Resort</h2></div>
+						<div class="icon_box_title"><h2>Ambiente Natural </h2></div>
 						<div class="icon_box_text">
-							<p>In vitae nisi aliquam, scelerisque leo a, volutpat sem. Vivamus rutrum dui fermentum eros hendrerit, id lobortis leo volutpat.</p>
+							<p>Arborización, excelente clima, alejado de ruidos Urbanos</p>
 						</div>
 					</div>
 				</div>
@@ -282,16 +299,21 @@
 					</div>
 				</div>
 			</div>
+				<div class="col-lg-8">
 			<div class="map-responsive">
 <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d1018441.901223275!2d-75.11125951807685!3d4.3568604809005524!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e0!4m5!1s0x8e3f9bfd2da6cb29%3A0x239d635520a33914!2zQm9nb3TDoQ!3m2!1d4.710988599999999!2d-74.072092!4m5!1s0x8e3934722925515f%3A0x8aac4c347193bd92!2sRenacer+Pijaos%2C+Guamo-Ortega%2C+Guamo%2C+Tolima!3m2!1d4.0031476999999995!2d-75.03222629999999!5e0!3m2!1ses-419!2scl!4v1552705165206" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
+	</div>
 			<div class="row newsletter_row">
 
 				<!-- Newsletter Content -->
 				<div class="col-lg-6">
 					<div class="newsletter_content">
 						<div class="newsletter_text">
-							<p>In vitae nisi aliquam, scelerisque leo a, volutpat sem. Vivamus rutrum dui fermentum eros hendrerit, id lobortis leo volutpat. Maecenas sollicitudin est in libero pretium interdum.</p>
+              <p> </p>
+							<p> </p>
+							<p>Puede Contactarnos para programar una visita  a los telefonos de abajo, animate a realizar la mejor inversion de su vida </p>
+
 						</div>
 					</div>
 				</div>
@@ -326,15 +348,18 @@
 							<ul class="contact_info_list">
 								<li class="d-flex flex-row align-items-start justify-content-start">
 									<div><div class="contact_info_icon d-flex flex-column align-items-center justify-content-center"><img src="images/placeholder.png" alt=""></div></div>
-									<div class="contact_info_text">Renacer Pijaos, Guamo</div>
+									<div class="contact_info_text">Renacer Pijaos
+								    	<div> Ing.Juan Carlos Casas    </div>
+											<div>	renacerpijaos@gmail.com  </div>
+											<div>	www.renacerpijaos.com    </div>
+											<div>	whatsap:3152520322       </div>
+											<div>	Oficinas calle 22 A 44B - 04 Bogotá </div>
+									</div>
 								</li>
 								<li class="d-flex flex-row align-items-center justify-content-start">
 									<div><div class="contact_info_icon d-flex flex-column align-items-center justify-content-center"><img src="images/smartphone.png" alt=""></div></div>
-									<div class="contact_info_text">+53 345 7953 32453</div>
-								</li>
-								<li class="d-flex flex-row align-items-center justify-content-start">
-									<div><div class="contact_info_icon d-flex flex-column align-items-center justify-content-center"><img src="images/mail.png" alt=""></div></div>
-									<div class="contact_info_text">gonzalo.pineda@gmail.com</div>
+									<div class="contact_info_text">+315 3272441 /+315 2520322 /315 3891058
+									    	Bogotá Tel. 3379569 -2683331 - 3152520322 </div>
 								</li>
 							</ul>
 						</div>
@@ -347,7 +372,7 @@
 					<div class="contact_form_container">
 						<div class="section_title_container_2">
 							<div class="section_title"><h1>Contact Info</h1></div>
-							<div class="section_text">Vivamus rutrum dui fermentum eros hendrerit, id lobortis leo volutpat. Maecenas sollicitudin est in libero pretium interdum.</div>
+							<div class="section_text"> </div>
 						</div>
 						<form action="#" class="contact_form" id="contact_form">
 							<div class="row contact_row">
@@ -369,19 +394,15 @@
 			<div class="row">
 				<div class="col">
 					<div class="footer_content d-flex flex-md-row flex-column align-items-center align-items-start justify-content-start">
-						<div class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></div>
 						<div class="footer_logo">
 							<div class="logo">
 								<a href="#">
-									<div>Guamo</div>
+									<div>Guamo </div>
 									<div>Tolima</div>
 								</a>
 							</div>
 						</div>
-						<div class="button footer_button ml-md-auto"><a href="#">book now</a></div>
-					</div>
+						</div>
 				</div>
 			</div>
 		</div>
