--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 				<div class="col">
 					<div class="section_title_container text-center">
 						<div class="section_title"><h1>Renacer Pijaos-II Etapa</h1></div>
-						<div class="section_text">La segunda etapa de Renacer Pijaos  es un condominio  construido fuera  de la zona Urbana del Guamo –Tolima  en ambiente    natural   con un diseño ecológico rodeado de zonas verdes , lagos  , senderos deportivos y espacios recreativos para descansar.  Contará con su portería vigilada, piscinas, cancha futbol, biogimnasio y sistemas auto sostenibles como para las generaciones energía eléctrica por medio de paneles solares y una planta de tratamiento de agua y servicios. .</div>
+						<div class="section_text">La segunda etapa de Renacer Pijaos  es un condominio  construido fuera  de la zona Urbana del Guamo –Tolima  en un ambiente natural rodeado de zonas verdes, lagos, senderos Ecologicos y espacios recreativos para disfrutar y descansar.  El Condominio contará con su portería vigilada, piscinas, cancha de futbol, biogimnasio y sistemas auto sostenibles como  las generacion energía eléctrica por medio de paneles solares y una planta de tratamiento de agua y servicios.</div>
 					</div>
 				</div>
 			</div>
@@ -119,11 +119,9 @@
 				<!-- Intro Content -->
 				<div class="col-lg-4 intro_col"  >
 					<div class="intro_content">
-						<div class="quote"><img src="images/quote.png" alt=""></div>
-						<div class="intro_text">
-							<p> Renacer Pijaos es un sitio recreacional  y al a vez esta en un ambiente natural, es lo que queríamos comprar, se nos dio la oportunidad.</p>
+							<div class="intro_text">
+							<p> " Renacer Pijaos es un sitio recreacional  y al a vez esta en un ambiente natural, es lo que queríamos comprar, se nos dio la oportunidad."</p>
 						</div>
-						<div class="quote"><img src="images/quote.png" alt=""></div>
 						<pre>
 								<div class="video-responsive">
 										<iframe   src="https://www.youtube.com/embed/ouQJmb2V8Mc"  height="300"	frameborder="0" allowfullscreen="allowfullscreen"></iframe>
