--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 						<div class="newsletter_text">
               <p> </p>
 							<p> </p>
-							<p>Puede Contactarnos para programar una visita  a los telefonos de abajo, animate a realizar la mejor inversion de su vida </p>
+							<p>Puede Contactarnos para programar una visita  a los telefonos que aparecen  abajo. ! Animate a realizar la mejor inversion de su vida! </p>
 
 						</div>
 					</div>
